# goes19

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
python/goes_abi/: __init__.py  cli.py
src/: lib.rs  web_tiles.rs
src/satellite/: abi.rs  batch.rs  native_sequence.rs
