[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "goes-abi"
version = "0.1.0"
description = "Standalone all-Rust GOES ABI renderer, tiler, and Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Fahrenheit Research" }]
keywords = ["goes", "abi", "satellite", "weather", "meteorology", "tiles"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[project.scripts]
goes-abi = "goes_abi.cli:main"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "goes_abi._goes_abi"
bindings = "pyo3"
